✨ feat: Adiciona controller e DTO para Atividade
- Configura conexão com banco de dados Aiven.
- Renomeia coluna 'check' para 'checked' no modelo AtividadeRequisitoItem.
- Corrige nome da entidade 'relatorio' para 'Relatorio' na query do RelatorioRepository.
- Cria AtividadeController para gerenciar operações de Atividade.
- Cria AtividadeDTO para transferência de dados de Atividade.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 # Database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=postgres://avnadmin:AVNS__pSkxkdypKoMQEcRu_7@compliancerural-rpg-api.b.aivencloud.com:20002/defaultdb?sslmode=require
 
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
