✨ feat: Adiciona endpoint para buscar atividade por ID
- Configura `spring.jpa.hibernate.ddl-auto` para `update` em `application.properties`.
- Implementa o método `findById` no `AtividadeController` para buscar uma atividade específica pelo seu ID.
- Utiliza `atividadeService.findById` para obter a atividade e lança uma exceção caso não seja encontrada.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=AVNS__pSkxkdypKoMQEcRu_7
 
 # JPA/Hibernate settings for development (no database connection required)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=never
 spring.jpa.show-sql=true
