chore: Ajusta configurações do PostgreSQL
- Remove configuração de inicialização de schema para desenvolvimento.
- Atualiza `spring.jpa.database-platform` para `org.hibernate.dialect.PostgreSQLDialect`.
- Habilita formatação SQL para melhor depuração.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,11 @@
-# Production settings - Aiven PostgreSQL
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Aiven PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://compliancerural-rpg-api.b.aivencloud.com:20002/defaultdb?sslmode=require
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS__pSkxkdypKoMQEcRu_7
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate settings for development (no database connection required)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.initialization-mode=never
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.batch_size=50
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-
-# Bean definition override
-spring.main.allow-bean-definition-overriding=true
