⚡ perf(atividade-requisito-item): Otimiza listagem de itens ao excluir dados do documento
Este commit introduz melhorias de performance na listagem de itens de requisito, evitando a transferência desnecessária de dados binários de documentos.

- Novo DTO `AtividadeRequisitoItemSemDocumentoDTO` criado para representar e listar itens de requisito sem o campo DOCUMENTO.
- O endpoint `GET /atividade-requisito-item/relatorio/{relatorioId}` no `AtividadeRequisitoItemController` foi modificado para retornar uma lista deste novo DTO, reduzindo o volume de dados transmitidos.
- O campo `documento` na entidade `AtividadeRequisitoItem` foi anotado com `@Lob` para garantir o tratamento correto de objetos grandes (LOBs) pelo ORM.
- Adicionadas anotações `@Transactional` e `@Transactional(readOnly = true)` aos métodos relevantes no controller para um gerenciamento de transações mais robusto.
- A configuração do datasource em `application.properties` foi ajustada, incluindo `spring.datasource.hikari.auto-commit=false` para suportar operações com LOBs e `autoReconnect=true` para melhorar a resiliência da conexão.

Arquivos afetados:
- `AtividadeRequisitoItemController.java`: Modificação do método `findByRelatorioId` e adição de anotações `@Transactional`.
- `AtividadeRequisitoItemSemDocumentoDTO.java`: Novo arquivo DTO.
- `AtividadeRequisitoItem.java`: Alteração da anotação do campo `documento`.
- `application.properties`: Ajustes na configuração do datasource.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # Aiven PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://compliancerural-rpg-api.b.aivencloud.com:20002/defaultdb?sslmode=require
+spring.datasource.url=jdbc:postgresql://compliancerural-rpg-api.b.aivencloud.com:20002/defaultdb?sslmode=require&autoReconnect=true
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS__pSkxkdypKoMQEcRu_7
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Desabilitar auto-commit para LOB
+spring.datasource.hikari.auto-commit=false
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
